# databricks-retail-lakehouse-course

./: README-for-cursor-usage.md  README.md  databricks-course.md  notes.md  project-setup.md
.cursor/rules/: databricks-course.mdc
retail-lakehouse/: .gitignore  README.md  pyproject.toml  requirements.txt
retail-lakehouse/conf/: dev.yml  prod.yml  test.yml
retail-lakehouse/data/sample/: customers.csv  orders.csv  products.csv
retail-lakehouse/docs/: architecture.md  cursor-guide.md  databricks-guide.md  learning-roadmap.md  repository-guide.md  setup.md
retail-lakehouse/notebooks/: 01_repo_orientation.py  02_ingest_bronze.py  03_build_silver.py  04_build_gold.py  05_quality_checks.py  06_run_pipeline_as_job.py
retail-lakehouse/sql/: analytics_queries.sql  validation_queries.sql
retail-lakehouse/src/retail_lakehouse/: __init__.py  config.py  constants.py
retail-lakehouse/src/retail_lakehouse/ingestion/: bronze_loader.py  readers.py
retail-lakehouse/src/retail_lakehouse/jobs/: bronze_job.py  full_pipeline_job.py  gold_job.py  silver_job.py
retail-lakehouse/src/retail_lakehouse/quality/: checks.py
retail-lakehouse/src/retail_lakehouse/transformations/: gold.py  silver.py
retail-lakehouse/src/retail_lakehouse/utils/: naming.py  paths.py
retail-lakehouse/tests/: conftest.py  test_bronze.py  test_gold.py  test_quality_checks.py  test_silver.py
